# lambdaprompt

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app-requirements.txt  debug.ipynb  dev-requirements.txt  pyproject.toml  tox.ini
.github/workflows/: publish-to-pypi.yml
app/: data.py  main.py
examples/: azure_gpt4_one.py  azure_gpt4_two.py  one.py  two.py
lambdaprompt/: __init__.py  backends.py  config.py  gpt3.py  gpt4.py  prompt.py  prompt_machine.py
lambdaprompt/app/: promptapi.py  readme.md
lambdaprompt/examples/: nbasql.py  search_based_answers.py  server.py
lambdaprompt/server/: data.py  main.py
tests/: test_gpt3.py  test_gpt4.py  test_prompt.py  test_server.py
