[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lambdaprompt"
description = "A functional programming interface for building AI systems"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["nlp", "ai", "functional", "composition", "prompt", "apply", "chain", "machine"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
]
urls = {homepage = "https://github.com/approximatelabs/lambdaprompt"}
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "lambdaprompt/_version.py"
